[metadata]
name = bookmarkd
author = Ryan S. Brown
author-email = sb@ryansb.com
summary = Convert between IPython notebooks and markdown
description-file = README.md
license = AGPLv3
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    markdown
    ipython
    convert
[files]
packages =
    bookmarkd
[entry_points]
console_scripts =
    bookmarkd = bookmarkd.cli:cli
